<resources>
    <string name="app_name">Space Droid</string>

    <string name="liftoff">Liftoff!</string>

    <string name="main_menu_title">Menu</string>
    <string name="main_menu_deltav">Delta-V Calculator</string>
    <string name="main_menu_twr">TWR Calculator</string>
    <string name="main_menu_spacex">SpaceX Launches</string>
    <string name="main_menu_iss">ISS Wiki</string>

    <string name="total_mass_kg">Total Mass (kg)</string>
    <string name="dry_mass_kg">Dry Mass (kg)</string>
    <string name="isp_n_s_kg">ISP (N.s/kg)</string>
    <string name="gravity_m_s">Gravity (m/s²)</string>
    <string name="engine_thrust_n">Engine Thrust (N)</string>
    <string name="engine_amount">Engine Amount</string>
    <string name="message_zero">No fields can be zero</string>
    <string name="message_less_than_zero">\'Total Mass\' can\'t be less than \'Dry Mass\'</string>
    <string name="message_empty_field">Please, fill all the fields below</string>
    <string name="message_deltav" formatted="false">ΔV = %s</string>
    <string name="message_twr" formatted="false">TWR = %s</string>

    <string name="subtract_sign">-</string>
    <string name="addition_sign">+</string>

    <string name="api_generics_error_title">API Error</string>
    <string name="api_generics_error_message">You may try again later\n\n:)</string>

    <string name="mismatch_year_error_message">We don\'t have any launches\' information for this year\n\nD:</string>
    <string name="mismatch_year_error_title">Mismatch year</string>
    <string name="spacex_minimum_year">Minimum year: 2006</string>
    <string name="flight_number" formatted="false">Flight number %s</string>
    <string name="launch_year">Launch year</string>
    <string name="mission_name">Mission Name</string>
    <string name="rocket_name">Rocket Name</string>
    <string name="payload_type">Payload Type</string>
    <string name="payload_id">Payload ID</string>
    <string name="orbit">Orbit</string>
    <string name="site_name">Site Name</string>
    <string name="video_link">See the Video</string>

    <string name="title_activity_i_s_s_wiki">ISSWikiActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ISS Wiki</string>
    <string name="nav_header_subtitle">International Space Station Wikipedia</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_structure">Structure</string>
    <string name="menu_science">Science</string>
    <string name="menu_crew">Crew</string>

    <string name="iss_home_title">General information about the ISS</string>
    <string name="iss_home_subtitle_purpose">Purpose</string>
    <string name="iss_home_content_purpose">The ISS was originally intended to be a laboratory, observatory, and factory while providing transportation, maintenance, and a low Earth orbit staging base for possible future missions to the Moon, Mars, and asteroids.</string>

    <string name="iss_home_subtitle_infos">Some useful informations</string>

    <string name="iss_home_list_orbitalvelocity">Orbital Velocity</string>
    <string name="iss_home_list_orbitalvelocitycontent">7.66 km/s (27,600 km/h; 17,100 mph)</string>

    <string name="iss_home_list_orbitalperiod">Orbital Period</string>
    <string name="iss_home_list_orbitalperiodcontent">92.68 minutes</string>

    <string name="iss_home_list_orbitsperday">Orbits per Day</string>
    <string name="iss_home_list_orbitsperdaycontent">15.54</string>

    <string name="iss_home_list_mass">Mass</string>
    <string name="iss_home_list_masscontent">419,725 kg (925,335 lb)</string>

    <string name="iss_home_list_length">Length</string>
    <string name="iss_home_list_lengthcontent">73.0 m (239.4 ft)</string>

    <string name="iss_home_list_width">Width</string>
    <string name="iss_home_list_widthcontent">109.0 m (357.5 ft)</string>

    <string name="iss_home_list_perigee">Perigee</string>
    <string name="iss_home_list_perigeecontent">417 km (259.1 mi)</string>

    <string name="iss_home_list_apogee">Apogee</string>
    <string name="iss_home_list_apogeecontent">421 km (261.6 mi)</string>

    <string name="iss_home_list_orbitalinclination">Orbital Inclination</string>
    <string name="iss_home_list_orbitalinclinationcontent">51.64°</string>

    <string name="iss_struct_title">ISS\'s Structure</string>

    <string name="iss_science_title">ISS\'s Scientific Researches\n(NASA only)</string>

    <string name="iss_crew_title">ISS\'s Actual Crew</string>
    <string name="iss_crew_katerubins">Kate Rubins</string>
    <string name="iss_crew_victorglover">Victor Glover</string>
    <string name="iss_crew_soichinoguchi">Soichi Noguchi</string>
    <string name="iss_crew_sergeyryzhikov">Sergey Ryzhikov</string>
    <string name="iss_crew_michaelhopkins">Michael Hopkins</string>
    <string name="iss_crew_shannonwalker">Shannon Walker</string>
    <string name="iss_crew_sergeykud">Sergey Kud-Sverchkov</string>

</resources>