<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpaceXContentActivity"
    android:background="@color/lighter_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/missionName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="70dp"
        android:text="@string/mission_name"
        android:textSize="26sp"
        android:textColor="@android:color/primary_text_dark"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/missionName_Content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        tools:text="Placeholder"
        android:textSize="20sp"
        android:textColor="@android:color/primary_text_dark"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/missionName" />

    <!-- SEPARATOR -->

    <TextView
        android:id="@+id/rocketName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="70dp"
        android:text="@string/rocket_name"
        android:textSize="26sp"
        android:textColor="@android:color/primary_text_dark"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rocketName_Content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        tools:text="Placeholder"
        android:textSize="20sp"
        android:textColor="@android:color/primary_text_dark"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rocketName" />

    <!-- SEPARATOR -->

    <TextView
        android:id="@+id/payloadType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:text="@string/payload_type"
        android:textSize="26sp"
        android:textColor="@android:color/primary_text_dark"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/missionName_Content" />

    <TextView
        android:id="@+id/payloadType_Content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        tools:text="PlaceHolder"
        android:textSize="20sp"
        android:textColor="@android:color/primary_text_dark"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/payloadType" />

    <!-- SEPARATOR -->

    <TextView
        android:id="@+id/payloadId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:text="@string/payload_id"
        android:textSize="26sp"
        android:textColor="@android:color/primary_text_dark"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rocketName_Content" />

    <TextView
        android:id="@+id/payloadId_Content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        tools:text="PlaceHolder"
        android:textSize="20sp"
        android:textColor="@android:color/primary_text_dark"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payloadId" />

    <!-- SEPARATOR -->

    <TextView
        android:id="@+id/orbit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:text="@string/orbit"
        android:textSize="26sp"
        android:textColor="@android:color/primary_text_dark"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/payloadType_Content" />

    <TextView
        android:id="@+id/orbit_Content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        tools:text="PlaceHolder"
        android:textSize="20sp"
        android:textColor="@android:color/primary_text_dark"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/orbit" />

    <!-- SEPARATOR -->

    <TextView
        android:id="@+id/siteName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:text="@string/site_name"
        android:textSize="26sp"
        android:textColor="@android:color/primary_text_dark"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payloadId_Content" />

    <TextView
        android:id="@+id/siteName_Content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        tools:text="PlaceHolder"
        android:textSize="20sp"
        android:textColor="@android:color/primary_text_dark"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/siteName" />

    <!-- SEPARATOR -->

    <Button
        android:id="@+id/videoLinkButton"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/video_link"
        android:textSize="18sp"
        android:textColor="@android:color/primary_text_dark"
        android:backgroundTint="@color/buttons"
        android:layout_marginBottom="70dp"
        android:layout_marginHorizontal="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>